--- a/desktop/onionshare/resources/locale/gl.json
+++ b/desktop/onionshare/resources/locale/gl.json
@@ -25,7 +25,7 @@
     "gui_receive_flatpak_data_dir": "Debido a que instalaches OnionShare usando Flatpk, tes que gardar os ficheiros nun cartafol dentro de ~/OnionShare.",
     "gui_copy_url": "Copiar enderezo",
     "gui_canceled": "Cancelado",
-    "gui_copied_url_title": "Enderezo de OnionShare copiado",
+    "gui_copied_url_title": "Copiouse o Enderezo de OnionShare",
     "gui_copied_url": "Enderezo OnionShare copiado ó portapapeis",
     "gui_show_qr_code": "Mostrar código QR",
     "gui_qr_code_dialog_title": "Código QR OnionShare",
@@ -95,9 +95,9 @@
     "history_requests_tooltip": "{} solicitudes web",
     "error_cannot_create_data_dir": "Non se puido crear o cartafol de datos OnionShare: {}",
     "gui_receive_mode_warning": "O modo Recepción permite que outras poidan subir ficheiros á túa computadora.<br><br><b>Potencialmente algúns ficheiros poderían tomar control sobre a túa computadora ó abrilos. Abre só elementos que recibas de xente de confianza, ou se realmente sabes o que fas.</b>",
-    "gui_open_folder_error": "Fallou a apertura do cartafol con xdg-open. O ficheiro está aquí: {}",
+    "gui_open_folder_error": "Non se puido abrir o cartafol con xdg-open. O ficheiro está aquí: {}",
     "gui_settings_language_label": "Idioma",
-    "gui_settings_language_changed_notice": "Reinicia OnionShare para utilizar o idioma seleccionado.",
+    "gui_settings_language_changed_notice": "Reinicia OnionShare para cambiar ao novo idioma.",
     "systray_menu_exit": "Saír",
     "systray_page_loaded_title": "Páxina cargada",
     "systray_page_loaded_message": "Cargado enderezo OnionShare",
@@ -119,7 +119,7 @@
     "gui_share_mode_autostop_timer_waiting": "Agardando a que remate o envío…",
     "gui_website_mode_no_files": "Aínda non se publicou unha web",
     "gui_receive_mode_no_files": "Aínda non se recibiu nada",
-    "gui_receive_mode_autostop_timer_waiting": "Agardando a que remate a recepción",
+    "gui_receive_mode_autostop_timer_waiting": "A rematar a recepción…",
     "days_first_letter": "d",
     "hours_first_letter": "h",
     "minutes_first_letter": "m",
@@ -138,20 +138,20 @@
     "gui_tab_name_receive": "Recibir",
     "gui_tab_name_website": "Sitio Web",
     "gui_tab_name_chat": "Chat",
-    "gui_close_tab_warning_title": "Estás certo?",
-    "gui_close_tab_warning_persistent_description": "Esta lapela é persistente. Se a pechas perderás o enderezo onion que está a utilizar. Tes a certeza de querer pechala?",
-    "gui_close_tab_warning_share_description": "Estás enviando ficheiros. Tes a certeza de querer pechar esta lapela?",
-    "gui_close_tab_warning_receive_description": "Estás recibindo ficheiros. Tes a certeza de querer pechar esta lapela?",
-    "gui_close_tab_warning_website_description": "Estás publicando un sitio web. Tes a certeza de querer pechar esta lapela?",
-    "gui_close_tab_warning_close": "Pechar",
+    "gui_close_tab_warning_title": "Pechar pestana?",
+    "gui_close_tab_warning_persistent_description": "Pechar a pestana persistente e perder o enderezo onion que está a usar?",
+    "gui_close_tab_warning_share_description": "Pechar a pestana que está a enviar ficheiros?",
+    "gui_close_tab_warning_receive_description": "Pechar a pestana que está recibindo ficheiros?",
+    "gui_close_tab_warning_website_description": "Pechar a pestana que hospeda un sitio web?",
+    "gui_close_tab_warning_close": "Ok",
     "gui_close_tab_warning_cancel": "Cancelar",
-    "gui_quit_warning_title": "Estas certo?",
-    "gui_quit_warning_description": "A compartición está activa nalgunha das túas lapelas. Se saes, pecharás todas as lapelas. Tes a certeza de querer saír?",
+    "gui_quit_warning_title": "Saír de OnionShare?",
+    "gui_quit_warning_description": "Saír e pechar todas as pestanas, incluso aquelas que están compartindo de xeito activo?",
     "gui_quit_warning_quit": "Saír",
     "gui_quit_warning_cancel": "Cancelar",
     "mode_settings_advanced_toggle_show": "Mostrar axustes avanzados",
     "mode_settings_advanced_toggle_hide": "Agochar axustes avanzados",
-    "mode_settings_persistent_checkbox": "Garda esta lapela, e abrirase automáticamente cando abras OnionShare",
+    "mode_settings_persistent_checkbox": "Abrir sempre esta pestana cando se inicia OnionShare",
     "mode_settings_public_checkbox": "Este é un servizo OnionShare público (desactiva a chave privada)",
     "mode_settings_autostart_timer_checkbox": "Iniciar o servizo onion na hora programada",
     "mode_settings_autostop_timer_checkbox": "Deter o servizo onion na hora programada",
@@ -175,8 +175,8 @@
     "settings_error_bundled_tor_broken": "OnionShare non puido conectar a Tor:\n{}",
     "error_port_not_available": "Non está dispoñible o porto OnionShare",
     "gui_rendezvous_cleanup_quit_early": "Saír axiña",
-    "gui_rendezvous_cleanup": "Agardando a que se pechen tódolos circuitos de Tor para ter certeza de que os ficheiros foron transferidos.\n\nEsto podería tardar un pouco.",
-    "gui_color_mode_changed_notice": "Reinicia OnionShare para aplicar o novo modo de cor.",
+    "gui_rendezvous_cleanup": "Agardar a que se pechen os circuitos Tor para ter certeza da transferencia de ficheiros.\n\nPodería levarlle uns minutos.",
+    "gui_color_mode_changed_notice": "Reinicia OnionShare para ver as novas cores.",
     "error_tor_protocol_error": "Hai un erro con Tor: {}",
     "history_receive_read_message_button": "Ler mensaxe",
     "mode_settings_receive_disable_files_checkbox": "Desactivar a subida de ficheiros",
@@ -199,19 +199,19 @@
     "gui_receive_url_public_description": "<b>Calquera</b> con este enderezo OnionShare pode <b>descargar</b> ficheiros ao teu computador utilizando o <b>Tor Browser</b>: <img src='{}' />",
     "gui_website_url_public_description": "<b>Calquera</b> con este enderezo OnionShare pode <b>visitar</b> o teu sitio web usando o <b>Tor Browser</b>: <img src='{}' />",
     "gui_share_url_public_description": "<b>Calquera</b> con este enderezo OnionShare pode <b>descargar</b> os teus ficheiros usando o <b>Tor Browser</b>: <img src='{}' />",
-    "gui_server_doesnt_support_stealth": "Lamentámolo, pero esta versión de Tor non soporta ocultación (Autenticación do cliente). Inténtao cunha nova versión de Tor, ou utiliza o modo 'público' se non ten que ser privado.",
+    "gui_server_doesnt_support_stealth": "Lamentámolo, pero esta versión de Tor non soporta ocultación (autenticación do cliente). Inténtao cunha nova versión de Tor, ou utiliza o modo 'público' se non ten que ser privado.",
     "gui_hide": "Agochar",
     "gui_reveal": "Amosar",
     "gui_qr_label_auth_string_title": "Chave Privada",
     "gui_qr_label_url_title": "Enderezo OnionShare",
     "gui_copied_client_auth": "Chave privada copiada ao portapapeis",
-    "gui_copied_client_auth_title": "Copiouse a chave privada",
+    "gui_copied_client_auth_title": "Copiouse a Chave Privada",
     "gui_copy_client_auth": "Copiar Chave privada",
     "gui_tor_settings_window_title": "Axustes Tor",
     "gui_settings_controller_extras_label": "Axustes Tor",
     "gui_settings_bridge_use_checkbox": "Usar unha ponte",
     "gui_settings_bridge_radio_builtin": "Elixe unha ponte prestablecida",
-    "gui_settings_bridge_none_radio_option": "Non usar unha ponte",
+    "gui_settings_bridge_none_radio_option": "Non usar pontes",
     "gui_settings_bridge_moat_radio_option": "Solicitar unha ponte a torproject.org",
     "gui_settings_bridge_custom_radio_option": "Proporcionar unha ponte que coñeces e é da túa confianza",
     "gui_settings_bridge_custom_placeholder": "escribe enderezo:porto (un por liña)",
@@ -222,14 +222,37 @@
     "moat_captcha_placeholder": "Escribe os caracteres da imaxe",
     "moat_captcha_submit": "Enviar",
     "moat_captcha_reload": "Recargar",
-    "moat_bridgedb_error": "Fallou a conexión a BridgeDB.",
-    "moat_captcha_error": "A solución non é correcta. Inténtao outra vez.",
-    "moat_solution_empty_error": "Debes escribir os caracteres que aparecen na imaxe",
+    "moat_bridgedb_error": "Non se puido contactar con BridgeDB.",
+    "moat_captcha_error": "Solución incorrecta. Inténtao outra vez.",
+    "moat_solution_empty_error": "Escribe os caracteres da imaxe",
     "mode_tor_not_connected_label": "OnionShare non está conectado á rede Tor",
-    "gui_dragdrop_sandbox_flatpak": "Para facer aínda máis segura a instancia Flatpak, non hai soporte para arrastrar e soltar. Usa o botón Engadir Ficheiros e Engadir Cartafol para buscar ficheiros.",
+    "gui_dragdrop_sandbox_flatpak": "Para facer aínda máis segura a instancia Flatpak, non hai soporte para arrastrar e soltar. Usa o botón \"Engadir Ficheiros\" e \"Engadir Cartafol\" para seleccionar ficheiros.",
     "gui_settings_bridge_moat_button": "Solicitar Nova Ponte",
     "gui_settings_stop_active_tabs_label": "Hai servizos en execución nalgunha das túas lapelas.\nDebes deter tódolos servizo para cambiar os axustes Tor.",
     "mode_settings_website_custom_csp_checkbox": "Envía cabeceira Content Security Policy personalizada",
-    "gui_settings_tor_bridges_label": "As Pontes axúdanche a acceder á Rede Tor en lugares onde Tor está bloqueada. Dependendo de onde estés unha ponte podería funcionar mellor que outras.",
-    "moat_contact_label": "Contactando BridgeDB..."
+    "gui_settings_tor_bridges_label": "As Pontes axúdanche a acceder á Rede Tor en lugares que Tor está bloqueada. Dependendo de onde te conectes unha ponte podería funcionar mellor que outras.",
+    "moat_contact_label": "A contactar con BridgeDB…",
+    "gui_autoconnect_description": "OnionShare depende da rede Tor xestionada por voluntarios.",
+    "gui_enable_autoconnect_checkbox": "Conectar automaticamente a Tor",
+    "gui_autoconnect_circumventing_censorship_got_bridges": "Pontes establecidas. A reconectar con Tor…",
+    "gui_autoconnect_bridge_detect_automatic": "Detectar o meu país usando o enderezo IP para os axustes da ponte",
+    "gui_autoconnect_try_again_without_a_bridge": "Intentar outra vez sen pontes",
+    "gui_autoconnect_circumventing_censorship": "A solucionar os problemas de conectividade…",
+    "gui_autoconnect_circumventing_censorship_starting_circumvention": "A evitar a censura…",
+    "waitress_web_server_error": "Houbo un problema ao iniciar o servidor web",
+    "gui_close_tab_warning_chat_description": "Pechar a pestana que hospeda o servidor de chat?",
+    "gui_autoconnect_connection_error_msg": "Comproba que tes conexión a Internet.",
+    "gui_autoconnect_failed_to_connect_to_tor": "Non se puido conectar a Tor",
+    "gui_autoconnect_trying_to_connect_to_tor": "A conectar con Tor…",
+    "gui_autoconnect_bridge_description": "Poderías conectarte usando unha ponte se a túa conexión a Internet está censurada.",
+    "gui_autoconnect_bridge_detect_manual": "Elexir o meu país manualmente para os axustes da ponte",
+    "gui_autoconnect_bridge_setting_options": "Axustes da ponte",
+    "gui_autoconnect_start": "Conectar a Tor",
+    "gui_autoconnect_configure": "Axustes da rede",
+    "gui_autoconnect_no_bridge": "Intentar outra vez sen pontes",
+    "gui_autoconnect_circumventing_censorship_requesting_bridges": "A solicitar pontes na API de Tor para evitar a censura…",
+    "gui_autoconnect_could_not_connect_to_tor_api": "Non se puido conectar coa API de Tor. Comproba que tes conexión a Internet antes de volver a intentalo.",
+    "gui_general_settings_window_title": "Xeral",
+    "gui_chat_mode_explainer": "O modo chat permíteche conversar interactivamente con outras persoas, no Navegador Tor.<br><br><b>O historial da conversa non se garda en OnionShare. O historial desaparece ao pechar o Navegador Tor.</b>",
+    "gui_autoconnect_circumventing_censorship_starting_meek": "Usar unha ponte encuberta para acceder aos dominios…"
 }
