--- a/desktop/onionshare/resources/locale/km.json
+++ b/desktop/onionshare/resources/locale/km.json
@@ -120,16 +120,16 @@
     "gui_all_modes_progress_starting": "{0:s}, %p% (ការគណនា)",
     "gui_all_modes_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "gui_share_mode_no_files": "មិនមានឯកសារដែលបានផ្ញើចេញនៅឡើយទេ",
-    "gui_share_mode_autostop_timer_waiting": "កំពុង​រង់ចាំ​ដើម្បី​បញ្ចប់​ការ​ផ្ញើចេញ",
+    "gui_share_mode_autostop_timer_waiting": "កំពុង​រង់ចាំ​ដើម្បី​បញ្ចប់​ការ​ផ្ញើចេញ…",
     "gui_receive_mode_no_files": "មិនទាន់ទទួលបានឯកសារនៅឡើយទេ",
-    "gui_receive_mode_autostop_timer_waiting": "កំពុងរង់ចាំបញ្ចប់ការទទួល",
+    "gui_receive_mode_autostop_timer_waiting": "កំពុងរង់ចាំបញ្ចប់ការទទួល…",
     "days_first_letter": "ថ",
     "hours_first_letter": "ម",
     "minutes_first_letter": "ន",
     "seconds_first_letter": "វ",
     "incorrect_password": "ពាក្យសម្ងាត់មិនត្រឹមត្រូវ",
     "gui_remove": "លុបចេញ",
-    "gui_dragdrop_sandbox_flatpak": "ដើម្បីធ្វើឱ្យ Flatpak sandbox កាន់តែមានសុវត្ថិភាព ការទាញបញ្ចូលមិនដំណើរការនោះទេ។ ប្រើប៊ូតុង បញ្ចូលឯកសារ និង បញ្ចូលថតឯកសារ ដើម្បីស្វែងរកមើលឯកសារដទៃទៀតជំនួសវិញ។",
+    "gui_dragdrop_sandbox_flatpak": "ដើម្បីធ្វើឱ្យ Flatpak sandbox កាន់តែមានសុវត្ថិភាព ការទាញបញ្ចូលមិនដំណើរការនោះទេ។ ប្រើប៊ូតុង បញ្ចូលឯកសារ និង បញ្ចូលថតឯកសារ ដើម្បីជ្រើសរើសឯកសារដទៃទៀតជំនួសវិញ។",
     "gui_chat_start_server": "ចាប់ផ្តើមបើកម៉ាស៊ីនមេដើម្បីឈែត",
     "gui_chat_stop_server": "បញ្ឈប់ម៉ាស៊ីនមេឈែត",
     "gui_receive_flatpak_data_dir": "ដោយសារតែអ្នកបានដំឡើង OnionShare ដោយប្រើ Flatpak អ្នកត្រូវតែរក្សាទុកឯកសារទៅក្នុងថតឯកសារ ក្នុង ~/OnionShare ។",
@@ -140,7 +140,7 @@
     "gui_settings_tor_bridges_label": "Bridges ជួយអ្នកចូលប្រើបណ្តាញ Tor នៅកន្លែងដែល Tor ត្រូវបានរាំងខ្ទប់។ Bridge មួយអាចដំណើរការបានល្អជាងមួយទៀត វាអាស្រ័យលើទីតាំងរបស់អ្នក។",
     "gui_settings_moat_bridges_invalid": "អ្នកមិនទាន់បានស្នើសុំ Bridge ពី torproject.org នៅឡើយទេ។",
     "gui_settings_stop_active_tabs_label": "មានសេវាកម្មផ្សេងទៀតដែលកំពុងដំណើរការនៅក្នុងផ្ទាំងមួយចំនួនរបស់អ្នក។\nអ្នកត្រូវតែបញ្ឈប់សេវាកម្មទាំងអស់ដើម្បីផ្លាស់ប្តូរការកំណត់ Tor របស់អ្នក។",
-    "mode_settings_persistent_checkbox": "រក្សាទុកផ្ទាំងនេះ ហើយបើកវាដោយស្វ័យប្រវត្តិ នៅពេលខ្ញុំបើក OnionShare",
+    "mode_settings_persistent_checkbox": "បើកផ្ទាំង​ tab នេះជានិច្ច នៅពេលដែល OnionShare ត្រូវបានចាប់ផ្តើម",
     "mode_settings_autostop_timer_checkbox": "បញ្ឈប់សេវាកម្ម Onion តាមពេលវេលាកំណត់",
     "mode_settings_advanced_toggle_hide": "លាក់ការកំណត់កម្រិតខ្ពស់",
     "mode_settings_public_checkbox": "នេះគឺជាសេវាកម្ម OnionShare សាធារណៈ (បិទកូនសោសម្ងាត់)",
@@ -148,7 +148,7 @@
     "mode_settings_receive_disable_text_checkbox": "បិទការដាក់ស្នើអត្ថបទ",
     "mode_settings_autostart_timer_checkbox": "ចាប់ផ្តើមសេវាកម្ម Onion តាមពេលវេលាកំណត់",
     "mode_settings_share_autostop_sharing_checkbox": "បញ្ឈប់ការបញ្ជូនបន្ទាប់ពីឯកសារត្រូវបានផ្ញើចេញ (ដោះធីកដើម្បីអនុញ្ញាតឱ្យទាញយកឯកសារនីមួយៗ)",
-    "moat_bridgedb_error": "កំហុសទាក់ទងទៅ BridgeDB។",
+    "moat_bridgedb_error": "មិនអាចទាក់ទង BridgeDB។",
     "mode_settings_website_disable_csp_checkbox": "កុំផ្ញើ header លំនាំដើមរបស់គោលការណ៍សុវត្ថិភាពមាតិកា (អនុញ្ញាតឱ្យវេបសាយរបស់អ្នកប្រើប្រភពពីភាគីទីបី)",
     "moat_captcha_placeholder": "បញ្ចូលតួអក្សរពីរូបភាព",
     "moat_captcha_submit": "ដាក់ស្នើ",
@@ -159,7 +159,7 @@
     "gui_settings_controller_extras_label": "ការកំណត់ Tor",
     "gui_settings_bridge_use_checkbox": "ប្រើ Bridge",
     "gui_settings_bridge_radio_builtin": "ជ្រើសរើស Bridge ដែលមានស្រាប់",
-    "gui_settings_bridge_none_radio_option": "កុំប្រើ Bridge",
+    "gui_settings_bridge_none_radio_option": "កុំប្រើ Bridges",
     "gui_settings_bridge_moat_radio_option": "ស្នើសុំ Bridge ពី torproject.org",
     "gui_settings_bridge_moat_button": "ស្នើសុំ Bridge ថ្មី",
     "gui_settings_bridge_custom_radio_option": "ផ្តល់ Bridge ដែលអ្នកបានដឹងពីប្រភពដែលទុកចិត្ត",
@@ -184,11 +184,11 @@
     "gui_tab_name_share": "ចែករំលែក",
     "gui_tab_name_receive": "ទទួល",
     "gui_tab_name_chat": "ឈែត",
-    "gui_close_tab_warning_title": "តើ​អ្នក​ប្រាកដ​ឬ​ទេ?",
-    "gui_close_tab_warning_share_description": "អ្នកកំពុងស្ថិតក្នុងដំណើរការផ្ញើឯកសារ។ តើអ្នកប្រាកដជាចង់បិទផ្ទាំងនេះមែនទេ?",
-    "gui_close_tab_warning_website_description": "វេបសាយរបស់អ្នកកំពុងដំណើរការ។ តើអ្នកប្រាកដជាចង់បិទផ្ទាំងនេះមែនទេ?",
+    "gui_close_tab_warning_title": "បិទផ្ទាំង tab?",
+    "gui_close_tab_warning_share_description": "បិទផ្ទាំង tab ដែលអ្នកកំពុងតែផ្ញើឯកសារ?",
+    "gui_close_tab_warning_website_description": "បិទផ្ទាំង tab ដែលកំពុងបង្ហោះវេបសាយ?",
     "gui_close_tab_warning_cancel": "បោះបង់",
-    "gui_quit_warning_title": "តើ​អ្នក​ប្រាកដ​ឬ​ទេ?",
+    "gui_quit_warning_title": "បិទ OnionShare?",
     "gui_quit_warning_cancel": "បោះបង់",
     "mode_settings_advanced_toggle_show": "បង្ហាញការកំណត់កម្រិតខ្ពស់",
     "mode_settings_receive_data_dir_browse_button": "រុករក",
@@ -200,16 +200,16 @@
     "moat_contact_label": "កំពុងទាក់ទង BridgeDB…",
     "moat_captcha_label": "ដោះស្រាយបញ្ហា CAPTCHA ដើម្បីស្នើសុំ bridge។",
     "moat_captcha_error": "ដំណោះស្រាយមិនត្រឹមត្រូវទេ។ សូម​ព្យាយាម​ម្តង​ទៀត។",
-    "moat_solution_empty_error": "អ្នកត្រូវតែបញ្ចូលតួអក្សរពីរូបភាព",
+    "moat_solution_empty_error": "សូមបញ្ចូលតួអក្សរពីរូបភាព",
     "mode_tor_not_connected_label": "OnionShare មិនត្រូវបានភ្ជាប់ទៅបណ្តាញ Tor ទេ",
     "gui_please_wait_no_button": "កំពុងចាប់ផ្តើម…",
     "gui_receive_url_public_description": "<b>នរណាក៏ដោយ</b> ដែលមានអាសយដ្ឋាន OnionShare នេះ អាច <b>ផ្ទុកឡើង </b> ឯកសារទៅកុំព្យូទ័ររបស់អ្នក ដោយប្រើ <b>កម្មវិធីរុករក Tor</b>: <img src='{}' />",
     "gui_share_url_public_description": "<b>នរណាក៏ដោយ</b> ដែលមានអាសយដ្ឋាន OnionShare នេះ អាច <b>ទាញយក</b> ឯកសាររបស់អ្នកដោយប្រើ <b>កម្មវិធីរុករក Tor</b>: <img src='{}' />",
     "gui_new_tab_chat_button": "ឈែតគ្នាដោយអនាមិក",
-    "gui_close_tab_warning_receive_description": "អ្នកកំពុងស្ថិតក្នុងដំណើរការទទួលឯកសារ។ តើអ្នកប្រាកដជាចង់បិទផ្ទាំងនេះមែនទេ?",
+    "gui_close_tab_warning_receive_description": "បិទផ្ទាំង tab ដែលអ្នកកំពុងទទួលឯកសារ?",
     "gui_main_page_chat_button": "ចាប់ផ្តើមឈែតគ្នា",
-    "gui_close_tab_warning_persistent_description": "ផ្ទាំង​នេះ​ស្ថិត​នៅ​ដដែល។ ប្រសិនបើអ្នកបិទវា អ្នកនឹងបាត់បង់អាសយដ្ឋាន Onion ដែលវាកំពុងប្រើ។ តើអ្នកប្រាកដជាចង់បិទវាមែនទេ?",
-    "gui_quit_warning_description": "ការបញ្ជូនឯកសារកំពុងដំណើរការនៅផ្ទាំងមួយចំនួនរបស់អ្នក។ ប្រសិនបើអ្នកចាកចេញ ផ្ទាំងទាំងអស់របស់អ្នកនឹងបិទ។ តើ​អ្នកប្រាកដជាចង់​ឈប់​ឬ?",
+    "gui_close_tab_warning_persistent_description": "បិទផ្ទាំង tab ហើយបាត់បង់អាសយដ្ឋាន onion ដែលវាកំពុងប្រើ?",
+    "gui_quit_warning_description": "ចាកចេញ និងបិទផ្ទាំង tab ទាំងអស់ ទោះបីជាផ្ទាំងខ្លះកំពុងចែករំលែក?",
     "mode_settings_receive_disable_files_checkbox": "បិទការផ្ទុកឡើងឯកសារ",
     "error_port_not_available": "ច្រក OnionShare មិនមានទេ",
     "gui_copy_client_auth": "ចម្លងកូនសោសម្ងាត់",
@@ -229,9 +229,30 @@
     "gui_settings_theme_dark": "ងងឹត",
     "gui_color_mode_changed_notice": "ចាប់ផ្ដើម OnionShare ឡើងវិញសម្រាប់ទម្រង់ពណ៌ថ្មីដែលបានកំណត់។",
     "gui_new_tab": "ផ្ទាំងថ្មី",
-    "gui_close_tab_warning_close": "បិទ",
+    "gui_close_tab_warning_close": "យល់ព្រម",
     "gui_qr_code_dialog_title": "OnionShare QR Code",
     "gui_file_selection_remove_all": "ដកចេញទាំងអស់",
     "gui_enable_autoconnect_checkbox": "ភ្ជាប់ទៅ Tor ដោយស្វ័យប្រវត្តិ",
-    "gui_autoconnect_failed_to_connect_to_tor": "បរាជ័យក្នុងការតភ្ជាប់ទៅ Tor"
+    "gui_autoconnect_failed_to_connect_to_tor": "បរាជ័យក្នុងការតភ្ជាប់ទៅ Tor",
+    "gui_autoconnect_trying_to_connect_to_tor": "កំពុងភ្ជាប់ទៅកាន់ Tor…",
+    "gui_autoconnect_circumventing_censorship": "កំពុងដោះស្រាយបញ្ហាការតភ្ជាប់…",
+    "gui_autoconnect_bridge_description": "អ្នកអាចភ្ជាប់ដោយប្រើ bridge ប្រសិនបើការភ្ជាប់អ៊ីនធឺណិតរបស់អ្នកត្រូវបានតាមដាន។",
+    "gui_autoconnect_bridge_detect_automatic": "កំណត់ប្រទេសរបស់ខ្ញុំតាមរយៈអាសយដ្ឋាន IP របស់ខ្ញុំសម្រាប់ការកំណត់ bridge",
+    "gui_autoconnect_bridge_detect_manual": "ជ្រើសរើសប្រទេសរបស់ខ្ញុំសម្រាប់ការកំណត់ bridge ដោយខ្លួនឯង",
+    "gui_autoconnect_configure": "ការកំណត់បណ្ដាញ",
+    "gui_autoconnect_no_bridge": "ព្យាយាមម្ដងទៀតដោយគ្មាន bridges",
+    "gui_autoconnect_circumventing_censorship_starting_circumvention": "កំពុង​គេច​ពី​ការ​តាមដាន…",
+    "gui_autoconnect_circumventing_censorship_requesting_bridges": "កំពុងស្នើសុំ bridges ពី Tor censorship circumvention API…",
+    "waitress_web_server_error": "វាមានបញ្ហាពេលចាប់ផ្ដើមម៉ាស៊ីនមេវេប",
+    "gui_autoconnect_could_not_connect_to_tor_api": "មិនអាចភ្ជាប់ទៅ Tor API បានទេ។ ត្រូវប្រាកដថាអ្នកបានភ្ជាប់អ៊ីនធឺណិត មុនពេលព្យាយាមម្តងទៀត។",
+    "gui_general_settings_window_title": "ទូទៅ",
+    "gui_close_tab_warning_chat_description": "បិទផ្ទាំង tab ដែលកំពុងបង្ហោះជាម៉ាស៊ីនមេសម្រាប់ឈែត?",
+    "gui_autoconnect_description": "OnionShare ពឹងផ្អែកលើបណ្តាញ Tor ដែលដំណើរការដោយស្ម័គ្រចិត្ត។",
+    "gui_autoconnect_connection_error_msg": "ត្រូវប្រាកដថាអ្នកបានភ្ជាប់អ៊ីនធឺណិត។",
+    "gui_autoconnect_bridge_setting_options": "ការកំណត់ Bridge",
+    "gui_autoconnect_start": "ភ្ជាប់ទៅកាន់ Tor",
+    "gui_autoconnect_try_again_without_a_bridge": "ព្យាយាមម្តងទៀតដោយគ្មាន bridges",
+    "gui_autoconnect_circumventing_censorship_starting_meek": "កំពុង​បង្កើត​ meek bridge សម្រាប់​ដែន​មុខ…",
+    "gui_autoconnect_circumventing_censorship_got_bridges": "Bridges ត្រូវបានបង្កើតឡើង។ កំពុងភ្ជាប់ទៅ Tor…",
+    "gui_chat_mode_explainer": "មុខងារជជែកអនុញ្ញាតឱ្យអ្នកជជែកជាមួយអ្នកដទៃនៅក្នុងកម្មវិធីរុករក Tor ។<br><br><b>ប្រវត្តិជជែកមិនត្រូវបានរក្សាទុកនៅក្នុង OnionShare ទេ។ ប្រវត្តិជជែកនឹងបាត់នៅពេលដែលអ្នកបិទកម្មវិធីរុករក Tor។</b>"
 }
