--- a/desktop/onionshare/resources/locale/nb_NO.json
+++ b/desktop/onionshare/resources/locale/nb_NO.json
@@ -2,9 +2,9 @@
     "gui_copied_url": "OnionShare-adresse kopiert til utklippstavle",
     "other_page_loaded": "Adresse innlastet",
     "not_a_readable_file": "{0:s} er ikke en lesbar fil.",
-    "close_on_autostop_timer": "Stoppet fordi tidsavbruddsuret gikk ut",
-    "closing_automatically": "Stoppet fordi nedlastingen er ferdig",
-    "large_filesize": "Advarsel: Forsendelse av stor deling kan ta flere timer",
+    "close_on_autostop_timer": "Stoppet fordi tidsavbrudd tiden utløp",
+    "closing_automatically": "Stoppet fordi nedlastingen ble ferdig",
+    "large_filesize": "Advarsel: En stor deling kan ta flere timer",
     "systray_menu_exit": "Avslutt",
     "gui_drag_and_drop": "Dra og slipp filer og mapper for å starte deling",
     "gui_add": "Legg til",
@@ -111,13 +111,13 @@
     "gui_all_modes_progress_starting": "{0:s}, %p% (kalkulerer)",
     "gui_all_modes_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "gui_share_mode_no_files": "Ingen filer sendt enda",
-    "gui_share_mode_autostop_timer_waiting": "Venter på fullføring av forsendelse",
+    "gui_share_mode_autostop_timer_waiting": "Venter på å fullføre av sendingen…",
     "gui_receive_mode_no_files": "Ingen filer mottatt enda",
     "gui_receive_mode_autostop_timer_waiting": "Venter på fullføring av mottak",
     "gui_all_modes_transfer_canceled_range": "Avbrutt {} - {}",
     "gui_all_modes_transfer_canceled": "Avbrutt {}",
-    "gui_stop_server_autostop_timer_tooltip": "Automatisk tidsavbruddsur utløper {}",
-    "gui_start_server_autostart_timer_tooltip": "Automatisk tidsur slutter {}",
+    "gui_stop_server_autostop_timer_tooltip": "Automatisk auto-stopp utløper {}",
+    "gui_start_server_autostart_timer_tooltip": "Automatisk auto-stopp slutter {}",
     "gui_waiting_to_start": "Planlagt start om {}. Klikk for å avbryte.",
     "gui_server_autostart_timer_expired": "Planlagt tid allerede tilbakelagt. Juster det for å starte deling.",
     "gui_autostop_timer_cant_be_earlier_than_autostart_timer": "Automatisk tidsavbruddsur kan ikke være likt eller predatere auomatisk starttid. Juster det for å starte deling.",
@@ -134,10 +134,10 @@
     "mode_settings_advanced_toggle_hide": "Skjul avanserte innstillinger",
     "mode_settings_advanced_toggle_show": "Vis avanserte innstillinger",
     "gui_quit_warning_cancel": "Avbryt",
-    "gui_quit_warning_title": "Er du sikker?",
+    "gui_quit_warning_title": "Lukk OnionShare?",
     "gui_close_tab_warning_cancel": "Avbryt",
-    "gui_close_tab_warning_close": "Lukk",
-    "gui_close_tab_warning_title": "Er du sikker?",
+    "gui_close_tab_warning_close": "Ok",
+    "gui_close_tab_warning_title": "Er du sikker på at du ønsker å lukke fanen?",
     "gui_new_tab_website_button": "Offentliggjør nettside",
     "gui_new_tab_share_button": "Del filer",
     "gui_new_tab_tooltip": "Åpne en ny fane",
@@ -150,8 +150,8 @@
     "mode_settings_public_checkbox": "Dette er en offentlig OnionShare-tjeneste (skrur av privat nøkkel)",
     "gui_close_tab_warning_receive_description": "Du mottar filer. Er du sikker på at du vil lukke denne fanen?",
     "gui_close_tab_warning_share_description": "Du sender filer. Er du sikker på at du vil lukke denne fanen?",
-    "gui_chat_stop_server": "Stopp sludringstjener",
-    "gui_chat_start_server": "Start sludringstjener",
+    "gui_chat_stop_server": "Stopp chat",
+    "gui_chat_start_server": "Start chat",
     "gui_file_selection_remove_all": "Fjern alle",
     "gui_remove": "Fjern",
     "gui_quit_warning_description": "Deling er aktiv i noen av fanene dine. Hvis du avslutter, vil alle fanene dine lukkes. Er du sikker på at du vil avslutte?",
@@ -231,7 +231,7 @@
     "gui_settings_moat_bridges_invalid": "Du har ikke forespurt en bro fra torproject.org enda.",
     "moat_captcha_placeholder": "Skriv inn tegnene fra bildet",
     "moat_solution_empty_error": "Du må skrive inn tegnene fra bildet",
-    "mode_settings_website_custom_csp_checkbox": "Send egendefinert innholdssikkerhetspraksishode",
+    "mode_settings_website_custom_csp_checkbox": "Send egendefinert Content Security Policy header",
     "gui_autoconnect_trying_to_connect_to_tor": "Kobler til Tor…",
     "gui_autoconnect_bridge_description": "Det kan hende du kan omgå sensur hvis du bruker en bro for å koble til.",
     "gui_general_settings_window_title": "Generelt",
@@ -252,6 +252,7 @@
     "gui_autoconnect_try_again_without_a_bridge": "Prøv igjen uten broer",
     "gui_autoconnect_circumventing_censorship_requesting_bridges": "Forespør broer fra Tor sitt omgåelses-API …",
     "gui_autoconnect_circumventing_censorship_starting_circumvention": "Omgår sensur …",
-    "waitress_web_server_error": "Kunne ikke starte vev-tjeneren",
-    "gui_close_tab_warning_chat_description": "Lukk fanen som vertstjener en sludretjener?"
+    "waitress_web_server_error": "Kunne ikke starte web server",
+    "gui_close_tab_warning_chat_description": "Lukk fanen som vertstjener en sludretjener?",
+    "gui_chat_mode_explainer": "Chat modus lar deg chatte interaktivt med andre, i Tor nettleser.<br><br><b>Chat historikken er ikke lagret i OnionShare. Chat historikken vil forsvinne når du lukker Tor Browser..</b>"
 }
