--- a/desktop/onionshare/resources/locale/pt_BR.json
+++ b/desktop/onionshare/resources/locale/pt_BR.json
@@ -252,5 +252,6 @@
     "gui_autoconnect_bridge_detect_manual": "Selecione meu país para configurações de ponte manualmente",
     "gui_autoconnect_could_not_connect_to_tor_api": "Não foi possível conectar-se à API do Tor. Verifique se você está conectado à Internet antes de tentar novamente.",
     "gui_autoconnect_circumventing_censorship_starting_meek": "Estabelecendo uma ponte meek para fronting de domínio…",
-    "gui_close_tab_warning_chat_description": "Fechar a guia que está hospedando um servidor de bate-papo?"
+    "gui_close_tab_warning_chat_description": "Fechar a guia que está hospedando um servidor de bate-papo?",
+    "waitress_web_server_error": "Ocorreu um problema ao iniciar o servidor web"
 }
