--- a/docs/source/locale/km/LC_MESSAGES/security.po
+++ b/docs/source/locale/km/LC_MESSAGES/security.po
@@ -6,16 +6,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OnionShare 2.5\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: onionshare-dev@lists.riseup.net\n"
 "POT-Creation-Date: 2023-09-05 11:30-0700\n"
-"PO-Revision-Date: 2022-02-24 10:02+0000\n"
-"Last-Translator: Rasy Chum <rasychum@gmail.com>\n"
+"PO-Revision-Date: 2024-02-16 13:01+0000\n"
+"Last-Translator: Edeth Meng <mengedeth@gmail.com>\n"
 "Language-Team: none\n"
 "Language: km\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Weblate 5.4\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../../source/security.rst:2
@@ -43,6 +44,14 @@ msgid ""
 "for that too. This avoids the traditional model of having to trust the "
 "computers of others."
 msgstr ""
+"**ភាគីទី៣ មិនមានសិទ្ធិចូលណាមួយចូលប្រើប្រាស់នៅក្នុង OnionShare ឡើយ។ ** "
+"ប្រើប្រាស់ OnionShare "
+"មានន័យថាអ្នកធ្វើការបង្ហោះដោយផ្ទាល់ពីម៉ាស៊ីនកុំព្យូទ័របស់អ្នក។ "
+"នៅពេលដែលអ្នកធ្វើការចែករំលែកនូវឯកសារផ្សេងៗជាមួយ OnionShare "
+"គឺថាមិនមានការផ្ទុកឡើងទៅម៉ាស៊ីនបម្រើទី៣ នោះទេ។ "
+"ប្រសិនបើអ្នកបង្កើតបន្ទប់ជជែកជាមួយនឹង OnionShare "
+"នោះគឺថាម៉ាស៊ីនកុំព្យូទ័ររបស់អ្នកដំណើរដូចជាម៉ាស៊ីនបម្រើនោះដែរ។ "
+"នេះជៀសវាងគំរូដើមនៃការមានទំនុកចិត្តលើកុំព្យូទ័ររបស់អ្នកដទៃ។"
 
 #: ../../source/security.rst:17
 msgid ""
